--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
 </head>
 
 <body>
+<div class="content">
 
 <header>
-    <h1>JOHN WICK FOUR!!!!!!!!</h1>
+    <h1>John Wick 4 - Peak Cinema</h1>
 </header>
 
 <nav>
-    <a href="pages/info.html">More Info</a> &nbsp; &nbsp;
-    <a href="pages/crew.html">Cast and Crew</a> &nbsp; &nbsp;
-    <a href="pages/reviews.html">Reviews</a>
+    <a href="info.html">More Info</a> &nbsp; &nbsp;
+    <a href="crew.html">Cast and Crew</a> &nbsp; &nbsp;
+    <a href="reviews.html">Reviews</a>
 </nav>
 
-<main class="mainBackground">
+<div class="cover"></div>
+
+<main>
 <div class="desc">
     <dl>
         <dt>Director:</dt>
@@ -31,7 +34,7 @@
         <dd>Keanu Reeves</dd>
         <dt>Rated: R, 18+</dt>
     </dl>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/yjRHZEUamCc?si=AfoFH4TEw4QSKCg-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>>
+        <iframe width="450" height="315" src="https://www.youtube.com/embed/yjRHZEUamCc?si=AfoFH4TEw4QSKCg-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>>
             Sorry, the Video Doesn't Seem to Work With Your Browser</iframe>
     <!--IMAGE HERE TO BREAK UP TEXT-->
     <p>John Wick: Chapter 4 is the ultimate climax to the John Wick Cinematic Universe, following John Wick (Keanu Reeves) in his revenge against the illusive High Table to earn his freedom. On his quest for vengenace, John Wick travels from the Bowery's hideout in NYC to Morocco, Germany, Japan, and eventually France. Along the way, John fights against hordes of armed guards and fights his way through them with unlikely allies, including: Caine, a blind assassin, Akira, the highly-skilled daughter of the Osaka Continental manager, and Mr. Nobody, an expert tracker who loves his dog. In their own way, they help John reach his goal to stand agains the High Table and finally find peace.
@@ -42,14 +45,15 @@
 <footer>
 <!--FILLER-->
 <br>
-<h3>Want to See Other Wicks?</h3>
+<h3 class="linktowicks">Want to See Other Wicks?</h3>
 <nav>
     <!--HERE LIES THE FUTURE SPACE FOR JOHN WICK 2 AND 3!!!!!!-->
-    <a>imagine</a>
+    <a>HERE GOES LINKS!!!!</a>
 </nav>
-<p>Want to Contact Me?<a herf="mailto:noahnmaceiko@agcolonials.org">noahmaceiko@agcolonials.org</a><br>Copyright &copy; Noah Maceiko</p>
+<p>Want to Contact Me? &nbsp;<a herf="mailto:noahnmaceiko@agcolonials.org">noahmaceiko@agcolonials.org</a><br>Copyright &copy; Noah Maceiko</p>
 </footer>
 
+</div>
 </body>
 
 </html>
