--- a/crew.html
+++ b/crew.html
@@ -5,7 +5,7 @@
     <title>John Wick 4 - Cast and Crew</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
-    <link href="../styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
     </header>
 
     <nav>
-        <a href="../index.html">Home</a> &nbsp; &nbsp;
+        <a href="index.html">Home</a> &nbsp; &nbsp;
         <a href="info.html">More Info</a> &nbsp; &nbsp;
         <a href="reviews.html">Reviews</a>
     </nav>
@@ -67,7 +67,7 @@
     </main>
 
     <footer>
-        <p>Want to Contact Me? &nbsp;<a herf="mailto:noahnmaceiko@agcolonials.org">noahmaceiko@agcolonials.org</a><br>Copyright &copy; Noah Maceiko</p>
+        <p>Want to Contact Me? &nbsp;<a herf="mailto:maceikonoah@gmail.com">maceikonoah@gmail.com</a><br>Copyright &copy; Noah Maceiko</p>
     </footer>
 
 </div>
