--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!--HERE LIES THE FUTURE SPACE FOR JOHN WICK 2 AND 3!!!!!!-->
     <a href="randomthing.jpg">John Wick</a> &nbsp; <a href="https://jakef18.github.io/FavoriteMovie2/">John Wick 2</a> &nbsp; <a href="https://kendricknicola.github.io/NewJohnWick3/">John Wick 3</a>
 </nav>
-<p>Want to Contact Me? &nbsp;<a herf="mailto:noahnmaceiko@agcolonials.org">noahmaceiko@agcolonials.org</a><br>Copyright &copy; Noah Maceiko</p>
+<p>Want to Contact Me? &nbsp;<a herf="mailto:maceikonoah@gmail.com">maceikonoah@gmail.com</a><br>Copyright &copy; Noah Maceiko</p>
 </footer>
 
 </div>
